# hc-actixweb

./: .eslintrc.js  Cargo.toml  Dockerfile  README.md  dockerfile  package-lock.json  package.json
.github/workflows/: rust.yml
hc-actix/: Cargo.toml
hc-actix/src/: index.html  login.rs  main.rs  session.rs
hc-axum/: Cargo.toml
hc-axum/src/: greek-synopsis.html  login.rs  main.rs  sgi.xml
libhc/: Cargo.toml
libhc/src/: db.rs  dbpostgres.rs  dbsqlite.rs  hcblockingclient.rs  lib.rs  synopsis.rs
src/: db.rs  index.html  libhc.rs  login.rs  main.rs  server.rs  session.rs
static/: greek-synopsis.html  index.html  wordtree.js
web/: Cargo.toml
web/src/: index.html  login.rs  main.rs  server.rs  session.rs
