[package]
name = "hc-actixweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1" }
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web-flash-messages = { version = "0.4.1", features = ["cookies"] }

sqlx = { version = "0.6.2", features = ["sqlite", "postgres", "runtime-actix-rustls", "any", "macros", "uuid"] }

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
#serde_repr = "0.1.9"

futures = "0.3.24"
env_logger = "0.9"
thiserror = "1.0.34"
secrecy = { version = "0.8", features = ["serde"] }
argon2 = { version = "0.4.1", features = ["std"] }
chrono = "0.4.22"
hex = "0.4.3"

rand = "0.8.5"

uuid = { version = "1.1.2", features = ["v4", "serde"] }

#polytonic-greek = { path = "../polytonic-greek" }
#hoplite_verbs_rs = { path = "../hoplite_verbs_rs" }
polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", version = "0.3.2" }
hoplite_verbs_rs = { git = "https://github.com/jeremymarch/hoplite_verbs_rs", version = "0.3.4" }

[profile.release]
opt-level = 3
#lto = true
