[workspace]
resolver = "2"
members = [
    "hc-actix",
    "hc-axum",
    "libhc",
]
default-members = ["hc-axum"] # i.e. which to run by default, else "cargo run -phc-axum --bin hc-axum"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]

[profile.release]
opt-level = 3
lto = true
