[package]
name = "hc-axum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hc-axum"
path = "src/main.rs"

[dependencies]
libhc = { path = "../libhc", features= ["postgres"]}
socketioxide = { version = "0.7.3", features = ["extensions"]}
axum = { version = "0.7.2" , features = ["macros"]}
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["trace", "cors", "fs"] }
tower = "0.4.13"
tower-sessions = { version = "0.7.0", features = ["postgres-store", "deletion-task"] }
tower-cookies = "0.10.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde = "1.0.193"
serde_json = "1.0.108"
http = "1.0.0"
uuid = "1.6.1"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
time = "0.3.30"
secrecy = { version = "0.8.0", features = ["serde"] }

oauth2 = "4.4.2"
sign-in-with-apple = { git = "https://github.com/jeremymarch/sign-in-with-apple", version = "0.4.2" }
#sign-in-with-apple = { path = "../../sign-in-with-apple", version = "0.4.2" }

[profile.release]
opt-level = 3
lto = true
