[package]
name = "hc-axum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hc-axum"
path = "src/main.rs"

[dependencies]
libhc = { path = "../libhc", features = ["postgres"] }
socketioxide = { version = "0.14.1", features = ["extensions"] }
axum = { version = "0.7.7", features = ["macros"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.1", features = ["trace", "cors", "fs"] }
tower = "0.5.1"
tower-sessions = "0.13.0"
tower-cookies = "0.10.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde = "1.0.210"
serde_json = "1.0.128"
http = "1.1.0"
uuid = "1.10.0"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
] }
time = "0.3.36"
secrecy = { version = "0.8.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
quick-xml = "0.36.2"

oauth2 = "4.4.2"
sign-in-with-apple = { git = "https://github.com/jeremymarch/sign-in-with-apple", version = "0.4.2" }
#sign-in-with-apple = { path = "../../sign-in-with-apple", version = "0.4.2" }

[profile.release]
opt-level = 3
lto = true
