[package]
name = "libhc"
version = "0.1.0"
edition = "2021"

[lib]
name = "libhc"
path = "src/lib.rs"
doctest = false

[dependencies]
chrono = { version = "0.4.26", default-features = false, features=["clock"] }
sqlx = { version = "0.7.2", features = ["sqlite", "postgres", "runtime-tokio-rustls", "uuid"] }
serde = { version = "1.0.188", features = ["derive"] }
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
async-trait = "0.1.73"
thiserror = "1.0.48"
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.2", features = ["std"] }
tokio = { version = "1.33.0", features = ["rt", "macros"] }

#hoplite_verbs_rs = { path = "../hoplite_verbs_rs" }
hoplite_verbs_rs = { git = "https://github.com/jeremymarch/hoplite_verbs_rs", version = "0.3.9" }


[features]
# default = ["postgres"]
sqlite = []
postgres = []

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
