[package]
name = "libhc"
version = "0.1.0"
edition = "2021"

[lib]
name = "libhc"
path = "src/lib.rs"
doctest = false

[dependencies]
chrono = { version = "0.4.31", default-features = false, features=["clock", "serde"] }
sqlx = { version = "0.7.3", features = ["sqlite", "postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
async-trait = "0.1.74"
thiserror = "1.0.50"
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.2", features = ["std"] }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
tracing = "0.1.40"

hoplite_verbs_rs = { path = "../../hoplite_verbs_rs" }
#hoplite_verbs_rs = { git = "https://github.com/jeremymarch/hoplite_verbs_rs", version = "0.4.8" }


[features]
# default = ["postgres"]
sqlite = []
postgres = []

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
