[package]
name = "libhc"
version = "0.1.0"
edition = "2021"

[lib]
name = "libhc"
path = "src/lib.rs"
doctest = false

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
] }
sqlx = { version = "0.8.1", features = [
    "sqlite",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
async-trait = "0.1.81"
thiserror = "1.0.63"
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
tokio = { version = "1.39.2", features = ["rt", "macros"] }
tracing = "0.1.40"
itertools = "0.13.0"

#hoplite_verbs_rs = { path = "../../hoplite_verbs_rs" }
#hoplite_verbs_rs = { git = "https://github.com/jeremymarch/hoplite_verbs_rs", version = "0.4.9" }

#hoplite_verb_chooser = { path = "../../hoplite_verb_chooser" }
hoplite_verb_chooser = { git = "https://github.com/jeremymarch/hoplite_verb_chooser", version = "0.1.1" }


[features]
# default = ["postgres"]
sqlite = []
postgres = []

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
